google-site-verification

--- a/colobate-main/index.html
+++ b/colobate-main/index.html
@@ -34,6 +34,8 @@
         gtag('js', new Date());
          gtag('config', 'G-JZ0GB577LD');
          </script>
+
+         <meta name="google-site-verification" content="xPF9XbdwjmvGACwbjWfZ-osaxGteXpVCbXDpH6pw2sY" />
   </head>
 
   <body>
