--- a/colobate-main/index.html
+++ b/colobate-main/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="Collibet Tailoring - Custom Stitching in 24 Hours | Ranchi" />
     <meta property="og:description" content="Premium custom tailoring for men & women in Ranchi. Get your perfect-fit clothing stitched and delivered within 24 hours." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="@/assets/site-hero3.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Collibet Tailoring - Custom Stitching in 24 Hours" />
     <meta name="twitter:description" content="Premium custom tailoring in Ranchi. 24-hour delivery guaranteed." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="@/assets/site-hero3.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
